cmake_minimum_required(VERSION 3.10)

project(fluid VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# set(CMAKE_CXX_FLAGS -O4)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")

# ADD_COMPILE_OPTIONS("-DTYPES=FLOAT,DOUBLE,FIXED(32, 16),FIXED(64, 8),FAST_FIXED(25, 11)")
ADD_COMPILE_OPTIONS("-DTYPES=FLOAT,DOUBLE,FIXED(64, 8),FAST_FIXED(64, 8)")
ADD_COMPILE_OPTIONS("-DSIZES=S(36, 84),S(777,5)")


add_executable(MyExecutable main.cpp ${SOURCES})